--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "grafaman"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Zhiltsov Dmitriy Andreevich <dmitriy.zhiltsov@lamoda.ru>"]
 
 [dependencies]
-rocket = "0.1.4"
-rocket_codegen = "0.1.4"
+rocket = "0.1.5"
+rocket_codegen = "0.1.5"
 telegram-bot = "0.4"
 serde = "*"
 serde_json = "*"
@@ -13,5 +13,9 @@ serde_derive = "*"
 lazy_static = "*"
 
 [dependencies.rocket_contrib]
+version = "0.1.5"
 default-features = false
 features = ["json"]
+
+[dev-dependencies]
+rocket = { version = "0.1.5", features = ["testing"] }
